# Priqualis

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  test.http
api/: main.py
config/rules/: base.yaml  jgp_validation.yaml
scripts/: demo.py
src/priqualis/autofix/: __init__.py  applier.py  generator.py
src/priqualis/core/: config.py  constants.py  exceptions.py
src/priqualis/etl/: pii_masking.py  schemas.py
src/priqualis/llm/: explainer.py
src/priqualis/reports/: generator.py
src/priqualis/rules/: __init__.py  engine.py  models.py  scoring.py
src/priqualis/search/: bm25.py  models.py  rerank.py  service.py  vector.py
src/priqualis/shadow/: alerts.py  fpa.py
tests/: conftest.py
ui/: app.py
